--- a/README
+++ b/README
@@ -1,52 +1,37 @@
-Catalyst-Plugin-Session-Store-Cache
+NAME
+    Catalyst::Plugin::Session::Store::Cache - Caching layer for Catalyst
+    Sessions
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
+SYNOPSIS
+        use Catalyst qw/Session Session::Store::Cache Session::Store::Something/;
 
-A README file is required for CPAN modules since CPAN extracts the README
-file from a module distribution so that people browsing the archive
-can use it to get an idea of the module's uses. It is usually a good idea
-to provide version information here so that people can decide whether
-fixes for the module are worth downloading.
+        MyApp->config->{session} = {
+            cache => {
+                driver => 'Memory',
+                seconds => 300
+            }
+        };
 
+DESCRIPTION
+    `Catalyst::Plugin::Session::Store::Cache' sits atop your existing
+    session store, caching sessions reads and writes. The `seconds'
+    configuration option provides the number of seconds that the session is
+    allowed to be "stale". Failure of the underlying cache during this time
+    would result in lost data, but that might be ok with you if it speeds
+    things up.
 
-INSTALLATION
+    CHI is used as the underlying cache, so the `driver' option must be a
+    driver that CHI will recognize.
 
-To install this module, run the following commands:
+AUTHOR
+    Cory G Watson, `<gphat at cpan.org>'
 
-	perl Makefile.PL
-	make
-	make test
-	make install
+ACKNOWLEDGEMENTS
+    Florian Ragwitz for providing some hints on implementation.
 
-SUPPORT AND DOCUMENTATION
+COPYRIGHT & LICENSE
+    Copyright 2009 Cory G Watson, all rights reserved.
 
-After installing, you can find documentation for this module with the
-perldoc command.
-
-    perldoc Catalyst::Plugin::Session::Store::Cache
-
-You can also look for information at:
-
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=Catalyst-Plugin-Session-Store-Cache
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/Catalyst-Plugin-Session-Store-Cache
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/Catalyst-Plugin-Session-Store-Cache
-
-    Search CPAN
-        http://search.cpan.org/dist/Catalyst-Plugin-Session-Store-Cache
-
-
-COPYRIGHT AND LICENCE
-
-Copyright (C) 2009 Cory G Watson
-
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
