--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 NAME
-    Catalyst::Plugin::Session::Store::Cache - Caching layer for Catalyst
+    Catalyst::Plugin::Session::Store::WithCache - Caching layer for Catalyst
     Sessions
 
 SYNOPSIS
-        use Catalyst qw/Session Session::Store::Cache Session::Store::Something/;
+        use Catalyst qw/Session Session::Store::WithCache Session::Store::Something/;
 
         MyApp->config->{session} = {
             cache => {
@@ -13,7 +13,7 @@ SYNOPSIS
         };
 
 DESCRIPTION
-    `Catalyst::Plugin::Session::Store::Cache' sits atop your existing
+    `Catalyst::Plugin::Session::Store::WithCache' sits atop your existing
     session store, caching sessions reads and writes. The `seconds'
     configuration option provides the number of seconds that the session is
     allowed to be "stale". Failure of the underlying cache during this time
